unpackaged/objects/Passport__c.object
<CustomObject>
    <fields>
        <fullName>Country_of_Issue__c</fullName>
        <label>Country of Issue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Expiry__c</fullName>
        <label>Date of Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Issue__c</fullName>
        <label>Date of Issue</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linked_to_Student_Pass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Linked to Student Pass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passport_Name__c</fullName>
        <label>Passport Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Passport Details</relationshipLabel>
        <relationshipName>Passports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visa?</label>
        <type>Checkbox</type>
    </fields>
    <label>Passport</label>
    <nameField>
        <label>Passport Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Passports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>